looks better, still need to fix spacing, and filter box.

--- a/week6/blog.css
+++ b/week6/blog.css
@@ -10,6 +10,8 @@ body {
 h1 {
     font-size: 2.5rem;
     color:#473144;
+    padding: 20px;
+    border-bottom: 2px solid #efc69B;
 }
 
 a {
@@ -21,19 +23,21 @@ header {
     background-color: #ffff;
     padding: 10px 20px;
     text-align: center;
-    border-bottom: 2px solid #ddd;
+    border-top: 2px solid #efc69B;
+    
 
 }
 
 nav ul {
     list-style: none;
     padding: 0;
+    text-align:right; 
 
 }
 
 nav ul li {
     display: inline;
-    margin: 0 15px;
+    margin: 0 10px;
 }
 
 nav ul li a {
@@ -41,26 +45,24 @@ nav ul li a {
 }
 
 .page {
-    display: flex;
-    justify-content: space-between;
-    margin: 20pc auto;
-    padding: 10px;
-    width: 80%;
-    border-top: 1px solid #ddd;
-
+    display: grid;
+    grid-template-columns: 20% 60% 20%; /* Three columns: 20%, 60%, 20% */
+    gap: 10px; /* Adds space between the columns */
+    width: 90%;
+    margin: 0 auto; /* Center the content */
+    border-top: 2px solid #efc69b;
 }
 
 .book-info {
-    width: 15%;
     padding: 10px;
+    font-weight: bold;
     font-size: 0.9rem;
     color: #473144;
 }
 
 .book-review {
-    width: 65%;
     padding: 10px;
-
+    text-align: left;
 }
 
 .book-review h2 {
@@ -80,9 +82,7 @@ nav ul li a {
 }
 
 .filters {
-    width: 15%;
     padding: 10px;
     text-align: right;
     color: #666;
-
 }
